# i2a2_desafioIndividual_02-09-2025

./: .gitignore  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/docker/: Dockerfile
backend/scripts/: bootstrap.sh  run_e2e.py
backend/src/: __init__.py  cli.py  config.py
backend/src/agents/: csv_agent.py  model_factory.py
backend/src/api/: main.py
backend/src/pipelines/: ingestion.py  preprocessing.py  visualization.py
backend/src/tools/: anomaly_tool.py  chart_tool.py
docs/: atividadeObrigatoria_02-09-25.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AnswerPanel.tsx  FileUploadCard.tsx  QuestionCard.tsx
ollama-backend/: README.md  docker-compose.yml  package.json
ollama-backend/src/: index.ts
ollama-backend/src/services/: ollamaService.ts
ollama-backend/src/utils/: containerManager.ts
scripts/: build_report.py  docker-build.sh  docker-run.sh  run_e2e.py
src/: cli.py  config.py
src/agents/: csv_agent.py
src/api/: main.py
src/memory/: store.py
src/tools/: stats_tool.py
tests/: test_ingestion.py  test_tools.py
